--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,19 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] 
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/server.js"
+    }
+  ]
 }
